--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="lib/js/mootools/mootools-core-1.4.1-yc.js" type="text/javascript"></script>
     <script src="lib/js/mootools/mootools-more-1.4.0.1-yc.js" type="text/javascript"></script>
     <script src="lib/js/mootools/forge/Scrollable/Scrollable.js" type="text/javascript"></script>
-    <script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
+    <script src="http://maps.google.com/maps/api/js?sensor=false&key=AIzaSyCj0cPaGRbxtqHa520mDHdb2kupRi7BnV0" type="text/javascript"></script>
     <script src="index.js" type="text/javascript"></script>
     
     <link href="index.css" rel="stylesheet" type="text/css" />
